--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -4,6 +4,8 @@
   flex-direction: column;
   padding-top: 56px;
   margin: 0 auto;
+  max-width: 984px;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 1024px) {
