--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,28 +1,50 @@
 .cover__link {
-  max-width: 1184px;
-  min-height: 740px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  background-image: url(../../../images/cover-trains.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: relative;
+  z-index: 0;
+  width: 100%;
+  height: 740px;
   text-decoration: none;
   color: #FFFFFF;
 }
 
-@media screen and (max-width: 1279px) {
+.cover__link:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #2a2c2f;
+  opacity: .3;
+  transition: opacity 0.5s ease;
+  z-index: -1;
+}
+  
+.cover__link:hover:before {
+  opacity: .8;
+}
+
+@media screen and (max-width: 1024px) {
   .cover__link {
-    min-height: 640px;
+    height: calc(100vw * (640 / 1024));
   }
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 768px) {
   .cover__link {
-    min-height: 480px;
+    height: calc(100vw * (480 / 768));
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 320px) {
   .cover__link {
-    min-height: 200px;
+    height: calc (100vw * (200 / 320));
   }
 }
