--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,17 +1,18 @@
 .cover__subtitle {
   position: relative;
   margin: 0;
+  font-weight: 400;
   max-width: 360px;
   font-size: 18px;
-  line-height: 22px;
+  line-height: 1.22;
   text-align: center;
   text-rendering: optimizeLegibility;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 550px) {
   .cover__subtitle {
     max-width: 288px;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.14;
   }
 }
