--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,21 +1,21 @@
 .cover__title {
-  display: block;
   position: relative;
   margin: 0 0 32px;
   max-width: 560px;
   font-weight: 900;
-  font-style: normal;
   font-size: 72px;
-  line-height: 76px;
+  line-height: 1.05;
   text-align: center;
   text-rendering: optimizeLegibility;
+  white-space: pre-line;
 }
 
-@media screen and (max-width: 767px) {
+
+@media screen and (max-width: 550px) {
   .cover__title {
     margin: 0 0 16px;
     max-width: 288px;
     font-size: 32px;
-    line-height: 35px;
+    line-height: 1.09;
   }
 }
