--- a/blocks/footer/__author/footer__author.css
+++ b/blocks/footer/__author/footer__author.css
@@ -1,8 +1,7 @@
 .footer__author {
     margin: 0;
     font-family: 'Inter', Arial, sans-serif;
-    font-style: normal;
-    font-weight: normal;
+    font-weight: 400;
     font-size: 14px;
     line-height: 1.14;
     color: #FFFFFF;
