--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -8,7 +8,7 @@
   align-items: center;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .footer {
     padding: 88px 24px 24px 24px;
   }
