--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -2,16 +2,13 @@
   text-decoration: none;
   color: white;
   font-size: 24px;
-  line-height: 28px;
+  line-height: 1.16;
 }
+
 
 @media screen and (max-width: 767px) {
   .header__lang-link {
     font-size: 18px;
-    line-height: 20px;
+    line-height: 1.11;
   }
-}
-
-.header__lang-link:hover {
-  opacity: .7;
 }
