--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -5,7 +5,7 @@
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
-    line-height: 36px;
+    line-height: 1.2;
     color: #FFFFFF;
     text-align: center;
     align-self: center;
@@ -33,6 +33,6 @@
     .lead__subtitle {
       margin: 0 0 40px 0;
       font-size: 16px;
-      line-height: 20px;
+      line-height: 1.25;
     }
   }
