--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,36 +1,42 @@
 .lead__title {
-    display: block;
-    margin: 0 auto;
+    margin: 0 auto 32px;
     max-width: 720px;
-    white-space: pre-line;
     font-weight: 900;
     font-size: 96px;
-    line-height: 100px;
+    line-height: 1.04;
     color: #FFFFFF;
     text-align: center;
   }
 
+  @media screen and (max-width: 1024px) {
+    .lead__title {
+      margin: 0 24px 32px;
+      max-width: 100%;
+    }
+  }
+
   @media screen and (max-width: 768px) {
     .lead__title {
-      margin: 0 24px 32px 24px;
+      margin: 0 24px 32px;
+      font-size: 40px;
+      line-height: 1.1;
     }
   }
 
   @media screen and (max-width: 425px) {
     .lead__title {
-      min-width: 288px;
-      margin: 0 16px 16px 16px;
+      margin: 0 16px 16px;
       font-size: 40px;
-      line-height: 44px;
+      line-height: 1.1;
     }
   }
   
   @media screen and (max-width: 320px) {
     .lead__title {
       max-width: 288px;
-      margin: 0 5vw 5vw 5vw;
+      margin: 0 5vw 5vw;
       font-size: 40px;
-      line-height: 44px;
+      line-height: 1.1;
     }
   }
   
