--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,13 +1,7 @@
 .place__link {
-  font-style: normal;
   font-weight: 400;
   font-size: 18px;
-  line-height: 22px;
+  line-height: 1.22;
   text-decoration-line: underline;
   color: #FFFFFF;
-  transition: opacity .3s ease;
-}
-
-.place__link:hover {
-  opacity: .8;
 }
