--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,4 +1,5 @@
 .place {
+    max-width: 1280px;
     padding-bottom: 80px;
     display: grid;
     grid-template-columns: 460px 1fr;
@@ -7,7 +8,7 @@
   }
 
   .place:last-of-type {
-    padding-bottom: 92px;
+    padding-bottom: 0;
   }
 
   @media screen and (min-width: 1024px) and (max-width: 1279px) {
