--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -26,3 +26,9 @@
       padding-top: 64px;
     }
   }
+  @media screen and (max-width: 320px) {
+    .places {
+      max-width: 320px;
+      padding-top: 64px;
+    }
+  }
