--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -6,14 +6,12 @@
   font-size: 72px;
   line-height: 1.05;
   text-align: center;
-  text-rendering: optimizeLegibility;
-  white-space: pre-line;
 }
 
 
 @media screen and (max-width: 550px) {
   .cover__title {
-    margin: 0 0 16px;
+    margin: 0 auto 16px;
     max-width: 288px;
     font-size: 32px;
     line-height: 1.09;
