--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,6 +1,6 @@
 .photo-grid {
   max-width: 1184px;
-  margin: 0 auto;
+  margin: 0 48px;
   padding: 0;
   display: grid;
   grid-gap: 16px;
@@ -9,25 +9,22 @@
   
   @media screen and (max-width: 1024px) {
     .photo-grid {
-      margin: 0 48px;
-      min-width: 928px;
-      max-width: 100%;
+      max-width: 928px;
       grid-gap: 14px;
     }
   }
   
   @media screen and (max-width: 768px) {
     .photo-grid {
-      margin: 0 24px;
-      min-width: 320px;
+      margin: 0 3.125vw;
       max-width: 100%;
     }
   }
   
   @media screen and (max-width: 320px) {
     .photo-grid {
-      max-width: 100%;
-      margin: 0 16px;
+      max-width: 288px;
+      margin: 0 5vw;
       grid-gap: 12px;
     }
   }
