--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,23 +1,32 @@
 .place__title {
+    max-width: 460px;
     margin: 0;
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
-    line-height: 76px;
+    line-height: 1.05;
     color: #FFFFFF;
   }
   
-  @media screen and (min-width: 768px) and (max-width: 1023px) {
+  @media screen and (max-width: 1024px) {
     .place__title {
+     max-width: 440px;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    .place__title {
+      max-width: 340px;
       font-size: 42px;
-      line-height: 46px;
+      line-height: 1.09;
     }
   }
   
   @media screen and (max-width: 767px) {
     .place__title {
       font-size: 32px;
-      line-height: 35px;
-      margin: 0 16px;
+      line-height: 1.09;
+      margin-left: 16px;
+      max-width: 288px;
     }
   }
