--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -11,14 +11,14 @@
     padding-bottom: 0;
   }
 
-  @media screen and (min-width: 1024px) and (max-width: 1279px) {
+  @media screen and (max-width: 1024px) {
     .place {
       grid-template-columns: 440px 1fr;
       grid-gap: 48px 32px;
     }
   }
   
-  @media screen and (min-width: 768px) and (max-width: 1023px) {
+  @media screen and (max-width: 768px) {
     .place {
       padding-bottom: 88px;
       grid-template-columns: 340px 1fr;
@@ -26,9 +26,18 @@
     }
   }
   
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width:700px) {
     .place {
-      grid-template-columns: minmax(288px, 1fr);
+      padding-bottom: 50px;
+      grid-template-columns: 1fr;
+      grid-gap: 32px;
+    }
+  }
+
+  @media screen and (max-width: 320px) {
+    .place {
+      padding-bottom: 50px;
+      grid-template-columns: minmax(288px, 320px);
       grid-gap: 32px;
     }
   }
