the 3rd iteration after auto-tests

--- a/blocks/nowrap/nowrap.css
+++ b/blocks/nowrap/nowrap.css
@@ -1,10 +1,10 @@
 .nowrap {
-    white-place: no-wrap;
+  white-space: normal;
 }
-  
-  
-  @media screen and (min-width: 768px) {
-    .nowrap {
-      white-place: normal;
-   }
+
+
+@media screen and (max-width: 768px) {
+  .nowrap {
+    white-space: nowrap;
+ }
 }
